# open-agent-sdk-rust

./: Cargo.toml  README.md
examples/: custom_tools.rs  multi_turn.rs  simple_query.rs
src/: lib.rs
src/agent/: agent.rs  loop.rs
src/api/: anthropic.rs  client.rs  openai.rs  provider.rs
src/context/: mod.rs
src/costtracker/: mod.rs
src/hooks/: mod.rs
src/mcp/: client.rs  mod.rs  shell_path.rs  tool.rs
src/permissions/: filesystem.rs  permissions.rs
src/skills/: loader.rs  mod.rs  registry.rs
src/tools/: askuser.rs  bash.rs  command_runner.rs  diff.rs  executor.rs  fileedit.rs  fileread.rs  filewrite.rs  glob_tool.rs  grep.rs  mod.rs  registry.rs  skill_tool.rs  tasks.rs  toolsearch.rs  webfetch.rs  websearch.rs  worktree_tools.rs
src/types/: mcp.rs  message.rs  mod.rs  skill.rs  tool.rs
src/utils/: compact.rs  messages.rs  mod.rs  retry.rs  tokens.rs
tests/: agent_test.rs  costtracker_test.rs  hooks_test.rs  permissions_test.rs  tools_test.rs  utils_test.rs
